src/snapshots/ebnf__parser__test__alternation_precidence.snap
---
source: src/parser.rs
assertion_line: 360
expression: result
---
- "\n             filter ::= 'a' | 'b' 'c';\n        "
- - lhs: filter
    rhs:
      Multiple:
        - Symbol:
            - Terminal: a
            - Alternation
            - Terminal: b
        - Terminal: c
