src/snapshots/ebnf__parser__test__alternation_precidence_multiple.snap
---
source: src/parser.rs
assertion_line: 369
expression: result
---
- "\n             filter ::= 'a' | 'b' | 'c';\n        "
- - lhs: filter
    rhs:
      Symbol:
        - Terminal: a
        - Alternation
        - Symbol:
            - Terminal: b
            - Alternation
            - Terminal: c
