src/snapshots/ebnf__parser__test__concat_precidence.snap
---
source: src/parser.rs
assertion_line: 396
expression: result
---
- "\n             filter ::= 'a' | 'b' , 'c' , 'd';\n        "
- - lhs: filter
    rhs:
      Symbol:
        - Terminal: a
        - Alternation
        - Symbol:
            - Terminal: b
            - Concatenation
            - Symbol:
                - Terminal: c
                - Concatenation
                - Terminal: d
