src/snapshots/ebnf__parser__test__concat_precidence_reverse.snap
---
source: src/parser.rs
assertion_line: 405
expression: result
---
- "\n             filter ::= 'a' , 'b' , 'c' | 'd';\n        "
- - lhs: filter
    rhs:
      Symbol:
        - Terminal: a
        - Concatenation
        - Symbol:
            - Terminal: b
            - Concatenation
            - Symbol:
                - Terminal: c
                - Alternation
                - Terminal: d
