src/snapshots/ebnf__parser__test__except_special_nonterminal.snap
---
source: src/parser.rs
assertion_line: 428
expression: result
---
- "\n             except ::= except!(    '\\n\\n'   ,   1);\n        "
- - lhs: except
    rhs:
      EXCEPT:
        - Terminal: "\\n\\n"
        - 1
