src/snapshots/ebnf__parser__test__except_special_nonterminal1.snap
---
source: src/parser.rs
expression: result
---
- "\n             except ::= except!(    '\\n\\n'   ,   1);\n        "
- - lhs: except
    rhs:
      EXCEPT:
        - Terminal: "\n\n"
        - 1
