src/snapshots/ebnf__parser__test__except_special_nonterminal2.snap
---
source: src/parser.rs
assertion_line: 442
expression: result
---
- "\n             except ::= except!(    '\\n\\n');\n        "
- - lhs: except
    rhs:
      EXCEPT:
        - Terminal: "\\n\\n"
        - ~
