src/snapshots/ebnf__parser__test__multiple_underscores.snap
---
source: src/parser.rs
assertion_line: 351
expression: result
---
- "\n             filter ::= a_b_cat;\n             a_b_cat ::= 'a' | 'b';\n        "
- - lhs: filter
    rhs:
      Nonterminal: a_b_cat
  - lhs: a_b_cat
    rhs:
      Symbol:
        - Terminal: a
        - Alternation
        - Terminal: b
